--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <properties>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <auth0-java-jwt.version>4.4.0</auth0-java-jwt.version>
     </properties>
 
     <dependencyManagement>
@@ -43,6 +44,12 @@
                 <groupId>com.khesam</groupId>
                 <artifactId>redis-repository</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>${auth0-java-jwt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
