--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>io.quarkus.platform</groupId>
         <artifactId>quarkus-bom</artifactId>
-        <version>3.2.4.Final</version>
+        <version>3.3.0</version>
         <relativePath/>
     </parent>
 
@@ -67,7 +67,7 @@
                 <plugin>
                     <groupId>io.quarkus.platform</groupId>
                     <artifactId>quarkus-maven-plugin</artifactId>
-                    <version>3.2.4.Final</version>
+                    <version>3.3.0</version>
                     <extensions>true</extensions>
                     <executions>
                         <execution>
