add some docker things!! :D

--- a/redis-container/src/main/resources/application.properties
+++ b/redis-container/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-quarkus.redis.hosts=redis://localhost/
+quarkus.redis.hosts=redis://172.16.67.128:26379,redis://172.16.67.129:26379,redis://172.16.67.130:26379
+quarkus.redis.client-type=sentinel
+quarkus.redis.password=****
+#
+quarkus.redis.master-name=****
+#quarkus.redis.role=sentinel
 
-quarkus.redis.load-script=import.redis
+#quarkus.redis.load-script=import.redis
 
 jwt.secret=salamsalam
 jwt.issuer=khesam109
