--- a/resources/docker/instance-3/redis-server.yml
+++ b/resources/docker/instance-3/redis-server.yml
@@ -73,7 +73,7 @@ services:
       - REDIS_SENTINEL_ANNOUNCE_IP=s3.redis-cluster.com
       - ANNOUNCE_PORT=26379
       - REDIS_MASTER_PASSWORD=salamsalam
-      - REDIS_SENTINEL_PASSWORD=aa
+#      - REDIS_SENTINEL_PASSWORD=aa
 
     volumes:
       - s3-storage:/data
